--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,40 @@
 			  	<div class="nav-collapse collapse navbar-responsive-collapse">
 					<ul class="nav navbar-nav">
 						<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown">About Our Program <b class="caret"></b></a>
+						<ul class="dropdown-menu">
+							<li>One</li>
+							<li>Two</li>
+						</ul>
+						</li>
+					</ul>
+				</div>
+                <div class="nav-collapse collapse navbar-responsive-collapse">
+					<ul class="nav navbar-nav">
+						<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Prospective Residents <b class="caret"></b></a>
+						<ul class="dropdown-menu">
+							<li>One</li>
+							<li>Two</li>
+						</ul>
+						</li>
+					</ul>
+				</div>
+                <div class="nav-collapse collapse navbar-responsive-collapse">
+					<ul class="nav navbar-nav">
+						<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Prospective Fellows<b class="caret"></b></a>
+						<ul class="dropdown-menu">
+							<li>One</li>
+							<li>Two</li>
+						</ul>
+						</li>
+					</ul>
+				</div>
+                <div class="nav-collapse collapse navbar-responsive-collapse">
+					<ul class="nav navbar-nav">
+						<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Current Residents and Fellows<b class="caret"></b></a>
 						<ul class="dropdown-menu">
 							<li>One</li>
 							<li>Two</li>
