--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
 			  	<div class="nav-collapse collapse navbar-responsive-collapse">
 					<ul class="nav navbar-nav">
 						<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown">About Our Program <b class="caret"></b></a>
+                          <a href="/" class="dropdown-toggle" data-toggle="dropdown">About Our Program <b class="caret"></b></a>
 						<ul class="dropdown-menu">
 							<li>One</li>
 							<li>Two</li>
