--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -73,15 +73,13 @@
             <div class="footer row">
               <div class="contact">
                 <p>
-                  Your Name<br />
-                  What You Are<br />
-                  your@email.com
+                  Department of Laboratory Medicine and Pathology<br />
+                  University of Minnesota
                 </p>
               </div>
               <div class="contact">
                 <p>
-                  <a href="http://github.com/yourusername/">github.com/yourusername</a><br />
-                  <a href="http://twitter.com/yourusername/">twitter.com/yourusername</a><br />
+                  <a href="http://pathology.umn.edu">pathology.umn.edu</a><br />
                 </p>
               </div>
             </div>
