--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
 		<link href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.0-rc1/css/bootstrap.min.css" rel="stylesheet">
  		
       	<!-- Custom CSS -->
-        <link rel="stylesheet" href="//bdunnette.github.io/fragmentary-lesion/css/main.css">
+        <link href="//bdunnette.github.io/fragmentary-lesion/css/main.css" rel="stylesheet">
 
 		<!-- Latest compiled and minified JavaScript -->
 		<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
