--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
         <div class="container">
           <div class="site">
             <div class="header row">
-              <h1 class="title"><a href="/">{{ site.name }}</a></h1>
+              <img src="http://residency.pathology.umn.edu/sites/default/files/block_m_outline.png"/><h1 class="title"><a href="#">{{ site.name }}</a></h1>
             </div>
             <div class="navbar">
 			  <div class="container">
