--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,14 +7,14 @@
         <meta name="viewport" content="width=device-width">
 
         <!-- Latest compiled and minified CSS -->
-		<link href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.0-rc1/css/bootstrap.min.css" rel="stylesheet">
+	<link href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.0-rc2/css/bootstrap.min.css" rel="stylesheet">
  		
       	<!-- Custom CSS -->
         <link href="//bdunnette.github.io/fragmentary-lesion/css/main.css" rel="stylesheet">
 
-		<!-- Latest compiled and minified JavaScript -->
-		<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-		<script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.0-rc1/js/bootstrap.min.js"></script>
+	<!-- Latest compiled and minified JavaScript -->
+	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+	<script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.0-rc2/js/bootstrap.min.js"></script>
 
     </head>
     <body>
@@ -24,64 +24,19 @@
             <div class="header row">
               <img src="http://residency.pathology.umn.edu/sites/default/files/block_m_outline.png"/><h1 class="title"><a href="#">{{ site.name }}</a></h1>
             </div>
-            <div class="navbar">
-			  <div class="container">
-			  	<div class="nav-collapse collapse navbar-responsive-collapse">
-					<ul class="nav navbar-nav">
-						<li class="dropdown">
-                          <a href="/" class="dropdown-toggle" data-toggle="dropdown">About Our Program <b class="caret"></b></a>
-						<ul class="dropdown-menu">
-							<li>One</li>
-							<li>Two</li>
-						</ul>
-						</li>
-					</ul>
-					<ul class="nav navbar-nav">
-						<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Prospective Residents <b class="caret"></b></a>
-						<ul class="dropdown-menu">
-							<li>One</li>
-							<li>Two</li>
-						</ul>
-						</li>
-					</ul>
-					<ul class="nav navbar-nav">
-						<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Prospective Fellows<b class="caret"></b></a>
-						<ul class="dropdown-menu">
-							<li>One</li>
-							<li>Two</li>
-						</ul>
-						</li>
-					</ul>
-					<ul class="nav navbar-nav">
-						<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Current Residents and Fellows<b class="caret"></b></a>
-						<ul class="dropdown-menu">
-							<li>One</li>
-							<li>Two</li>
-						</ul>
-						</li>
-					</ul>
-				</div>
-			  </div><!-- /.container -->
-			</div><!-- /.navbar -->
-
-
+            <div class="row">
+	      <div class="col-lg-2">
+		<ul class="nav nav-tabs nav-stacked">
+		  {% for page in site.pages | order:descending %}
+		    <script>console.log("{{page.path | split:'/' | size}}");</script>
+		    <li><a href="{{ page.url }}">{{ page.title }}</a></li>
+		  {% endfor %}
+		</ul>
+	      </div>
                 {{ content }}
-
+	    </div>
             <div class="footer row">
-              <div class="contact">
-                <p>
-                  Department of Laboratory Medicine and Pathology<br />
-                  University of Minnesota
-                </p>
-              </div>
-              <div class="contact">
-                <p>
-                  <a href="http://pathology.umn.edu">pathology.umn.edu</a><br />
-                </p>
-              </div>
+              
             </div>
           </div>
         </div> <!-- /container -->
