--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,5 @@
 @import url(http://fonts.googleapis.com/css?family=Noto+Sans|Noto+Serif);
 
-@link-color: #7A0019;
-
 h1, h2, h3 {
   font-family: 'Noto Serif', serif;
   color: #7A0019;
@@ -13,4 +11,21 @@ body, p, h4, h5, h6 {
 
 a {
   color: #7A0019;
+}
+
+/* from http://avexdesigns.com/responsive-youtube-embed/ */
+.video-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 30px; height: 0; overflow: hidden;
+}
+ 
+.video-container iframe,
+.video-container object,
+.video-container embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
