--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,32 +11,43 @@
  		
       	<!-- Custom CSS -->
         <link href="//bdunnette.github.io/fragmentary-lesion/css/main.css" rel="stylesheet">
+	<link rel="stylesheet" href="http://a.umn.edu/templates/web/responsive/current/css/umnhf-dd.css">
 
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.0-rc2/js/bootstrap.min.js"></script>
+	<script src="http://a.umn.edu/templates/web/responsive/current/js/umnhf.js"></script>
 
     </head>
     <body>
 
         <div class="container">
           <div class="site">
-            <div class="header row">
-              <img src="http://residency.pathology.umn.edu/sites/default/files/block_m_outline.png"/><h1 class="title"><a href="#">{{ site.name }}</a></h1>
+	    {% include umn_header.html %}
+            <div class="row">
+              <div class="col-lg-12"><h2><a href="#">{{ site.name }}</a></h2></div>
             </div>
             <div class="row">
 	      <div class="col-lg-2">
 		<ul class="nav nav-tabs nav-stacked">
-		  {% for page in site.pages | order:descending %}
-		    <script>console.log("{{page.path | split:'/' | size}}");</script>
-		    <li><a href="{{ page.url }}">{{ page.title }}</a></li>
+		  {% for menu_level in (1..2) %}
+		    <script>console.log({{ menu_level }});</script>
+		    {% for page in site.pages %}
+		      {% assign page_level = page.path | split:'/' | size %}
+		      <script>console.log("{{page.path}}:{{page_level}}");</script>
+		      {% if page_level == menu_level %}
+			<li><a href="{{ page.url }}">{{ page.title }}</a></li>		      
+		      {% endif %}
+		    {% endfor %}
 		  {% endfor %}
 		</ul>
 	      </div>
+	      <div class="col-lg-10">
                 {{ content }}
+	      </div>
 	    </div>
             <div class="footer row">
-              
+            {% include umn_footer.html %}  
             </div>
           </div>
         </div> <!-- /container -->
