--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,8 @@ a {
  
 .video-container iframe,
 .video-container object,
-.video-container embed {
+.video-container embed,
+.video-container video {
     position: absolute;
     top: 0;
     left: 0;
