adding directory for file assets; listing training sites

--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,9 @@ a {
 .video-container {
     position: relative;
     padding-bottom: 56.25%;
-    padding-top: 30px; height: 0; overflow: hidden;
+    padding-top: 30px;
+    height: 0; 
+    overflow: hidden;
 }
  
 .video-container iframe,
@@ -25,6 +27,7 @@ a {
 .video-container embed,
 .video-container video {
     position: absolute;
+    padding-top: 10px;
     top: 0;
     left: 0;
     width: 100%;
