--- a/_includes/fellowship_list.html
+++ b/_includes/fellowship_list.html
@@ -1,8 +1,7 @@
-<h3>Available Fellowships:</h3>
 <ul>
 {% for page in site.pages %}
     {% if page.categories contains 'fellowships' %}
-        <li><a href="{{page.url}}">{{ page.title }}</a></li>
+        <li><a href="{{site.baseurl}}{{page.url}}">{{ page.title }}</a></li>
     {% endif %}
 {% endfor %}
 </ul>
