--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,15 +7,15 @@
         <meta name="viewport" content="width=device-width">
 
         <!-- Latest compiled and minified CSS -->
-	<link href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.0-rc2/css/bootstrap.min.css" rel="stylesheet">
+	<link href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
  		
       	<!-- Custom CSS -->
-        <link href="//bdunnette.github.io/fragmentary-lesion/css/main.css" rel="stylesheet">
+        <link href="{{site.baseurl}}/css/main.css" rel="stylesheet">
 	<link rel="stylesheet" href="http://a.umn.edu/templates/web/responsive/current/css/umnhf-dd.css">
 
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-	<script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.0-rc2/js/bootstrap.min.js"></script>
+	<script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.0/js/bootstrap.min.js"></script>
 	<script src="http://a.umn.edu/templates/web/responsive/current/js/umnhf.js"></script>
 
     </head>
@@ -25,12 +25,9 @@
           <div class="site">
 	    {% include umn_header.html %}
             <div class="row">
-              <div class="col-lg-12"><h2><a href="#">{{ site.name }}</a></h2></div>
-            </div>
-            <div class="row">
 	      <div class="col-lg-2">
 		<ul class="nav nav-tabs nav-stacked">
-		  {% for menu_level in (1..2) %}
+		  {% for menu_level in (2..3) %}
 		    <script>console.log({{ menu_level }});</script>
 		    {% for page in site.pages %}
 		      {% assign page_level = page.path | split:'/' | size %}
