--- a/_includes/fellowship_list.html
+++ b/_includes/fellowship_list.html
@@ -1,5 +1,6 @@
+{% assign sorted_pages = site.pages | sort:"path" %}
 <ul>
-{% for page in site.pages %}
+{% for page in sorted_pages %}
     {% if page.categories contains 'fellowships' %}
         <li><a href="{{site.baseurl}}{{page.url}}">{{ page.title }}</a></li>
     {% endif %}
