--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,6 +40,7 @@
 		</ul>
 	      </div>
 	      <div class="col-lg-10">
+                <h2>{{ title }}</h2>
                 {{ content }}
 	      </div>
 	    </div>
