--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,18 @@ a {
   color: #7A0019;
 }
 
+th {
+color: white;
+background: #7a0019;
+background: -moz-linear-gradient(top,#7a0019 0%,#5b0013 100%);
+background: -webkit-gradient(linear,left top,left bottom,color-stop(0%,#7a0019),color-stop(100%,#5b0013));
+background: -webkit-linear-gradient(top,#7a0019 0%,#5b0013 100%);
+background: -o-linear-gradient(top,#7a0019 0%,#5b0013 100%);
+background: -ms-linear-gradient(top,#7a0019 0%,#5b0013 100%);
+background: linear-gradient(to bottom,#7a0019 0%,#5b0013 100%);
+filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#7a0019',endColorstr='#5b0013',GradientType=0);
+}
+
 /* from http://avexdesigns.com/responsive-youtube-embed/ */
 .video-container {
     position: relative;
@@ -33,3 +45,5 @@ a {
     width: 100%;
     height: 100%;
 }
+
+
