updating static nav

--- a/_includes/site_nav.html
+++ b/_includes/site_nav.html
@@ -1,11 +1,9 @@
 <ul class="nav nav-tabs nav-stacked">
   <li><a href="{{ site.baseurl }}/about/">About Our Program</a></li>
   <ul>
-        <li><a href="#">Action</a></li>
-        <li><a href="#">Another action</a></li>
-        <li><a href="#">Something else here</a></li>
-        <li><a href="#">Separated link</a></li>
-        <li><a href="#">One more separated link</a></li>
+        <li><a href="{{ site.baseurl }}/about/faculty/">Teaching Faculty</a></li>
+        <li><a href="{{ site.baseurl }}/about/administration/">Administration</a></li>
+        <li><a href="{{ site.baseurl }}/about/training_sites/">Training Sites</a></li>
   </ul>
   </li>
   <li><a href="{{ site.baseurl }}/prospective_residents/">Prospective Residents</a></li>
