--- a/_includes/site_nav.html
+++ b/_includes/site_nav.html
@@ -5,8 +5,10 @@
         <li><a href="{{ site.baseurl }}/about/administration/">Administration</a></li>
         <li><a href="{{ site.baseurl }}/about/training_sites/">Training Sites</a></li>
   </ul>
-  </li>
   <li><a href="{{ site.baseurl }}/prospective_residents/">Prospective Residents</a></li>
+<ul>
+        <li><a href="{{ site.baseurl }}/prospective_residents/applying/">Applying & FAQs</a></li>
+</ul>
   <li><a href="{{ site.baseurl }}/prospective_fellows/">Prospective Fellows</a></li>
   <li><a href="{{ site.baseurl }}/current/">Current Residents</a></li>
 </ul>
