--- a/_includes/site_nav.html
+++ b/_includes/site_nav.html
@@ -1,3 +1,4 @@
+<div>
 <ul class="nav nav-tabs nav-stacked">
   <li><a href="{{ site.baseurl }}/about/">About Our Program</a></li>
   <ul>
@@ -12,3 +13,4 @@
   <li><a href="{{ site.baseurl }}/prospective_fellows/">Prospective Fellows</a></li>
   <li><a href="{{ site.baseurl }}/current/">Current Residents</a></li>
 </ul>
+</div>
