--- a/css/main.css
+++ b/css/main.css
@@ -106,3 +106,14 @@ img {
   margin-top: 10px;
   background-color: #ffde7a;
 }
+
+.sidebar {
+  position: relative;
+  height: 100%;
+}
+
+.edit-link {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+}
