--- a/_includes/cp_rotations_list.html
+++ b/_includes/cp_rotations_list.html
@@ -5,7 +5,14 @@
 <ul>
 {% for page in sorted_pages %}
 {% if page.categories contains 'rotations' and page.categories contains 'cp' and page.categories contains 'required' %}
-    <li><a href="{{site.baseurl}}{{page.url}}">{{ page.title }}</a></li>
+    <li>
+        {% assign content_size = page.content | size %}
+        {% if content_size > 0 %}
+            <a href="{{site.baseurl}}{{page.url}}">{{ page.title }}</a>
+        {% else %}
+            {{ page.title }}
+        {% endif %}
+    </li>
 {% endif %}
 {% endfor %}
 </ul>
@@ -15,7 +22,14 @@
 <ul>
 {% for page in sorted_pages %}
 {% if page.categories contains 'rotations' and page.categories contains 'cp' and page.categories contains 'elective' %}
-    <li><a href="{{site.baseurl}}{{page.url}}">{{ page.title }}</a></li>
+    <li>
+        {% assign content_size = page.content | size %}
+        {% if content_size > 0 %}
+            <a href="{{site.baseurl}}{{page.url}}">{{ page.title }}</a>
+        {% else %}
+            {{ page.title }}
+        {% endif %}
+    </li>
 {% endif %}
 {% endfor %}
 </ul>
